1/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'float'", "'else'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "FLOAT", 
                      "ELSE", "FOR", "FUNCTION", "IF", "INT", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "FLOATLIT", "INTLIT", "BOOLLIT", 
                      "STRINGLIT", "ADDOP", "SUBOP", "MULOP", "DIVOP", "MODOP", 
                      "NEGOP", "ANDOP", "OROP", "EQOP", "NEQOP", "LTOP", 
                      "LEOP", "GTOP", "GEOP", "STRINGCONCAT", "LB", "RB", 
                      "LSB", "RSB", "LCB", "RCB", "DOT", "COMMA", "SM", 
                      "COLON", "ASSIGN", "ID", "WS", "BLOCKCOMMENT", "LINECOMMENT", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_vardecl_wo_asg = 3
    RULE_vardecl_w_asg = 4
    RULE_fundecl = 5
    RULE_fun_prototype = 6
    RULE_fun_inherit_subpart = 7
    RULE_paramdecl = 8
    RULE_paramlist = 9
    RULE_params = 10
    RULE_param = 11
    RULE_stm = 12
    RULE_agnStm = 13
    RULE_ifStm = 14
    RULE_false_stm = 15
    RULE_funCall = 16
    RULE_forStm = 17
    RULE_scalar_variable = 18
    RULE_condition_expr = 19
    RULE_update_expr = 20
    RULE_block_stm = 21
    RULE_whileStm = 22
    RULE_doWhileStm = 23
    RULE_breakStm = 24
    RULE_continueStm = 25
    RULE_returnStm = 26
    RULE_callStm = 27
    RULE_exprList = 28
    RULE_expr = 29
    RULE_expr0 = 30
    RULE_expr1 = 31
    RULE_expr2 = 32
    RULE_expr3 = 33
    RULE_expr4 = 34
    RULE_expr5 = 35
    RULE_expr6 = 36
    RULE_expr7 = 37
    RULE_operand = 38
    RULE_idList = 39
    RULE_arrLit = 40
    RULE_arrEles = 41
    RULE_int_list = 42
    RULE_float_list = 43
    RULE_bool_list = 44
    RULE_string_list = 45
    RULE_atomicType = 46
    RULE_varType = 47
    RULE_fnType = 48
    RULE_arrTypeDecl = 49
    RULE_intOp = 50
    RULE_floatOp = 51
    RULE_boolOp = 52
    RULE_stringConcat = 53
    RULE_indexOp = 54
    RULE_indexList = 55
    RULE_rUnaryOp = 56
    RULE_binOp = 57
    RULE_relational_op = 58

    ruleNames =  [ "program", "decl", "vardecl", "vardecl_wo_asg", "vardecl_w_asg", 
                   "fundecl", "fun_prototype", "fun_inherit_subpart", "paramdecl", 
                   "paramlist", "params", "param", "stm", "agnStm", "ifStm", 
                   "false_stm", "funCall", "forStm", "scalar_variable", 
                   "condition_expr", "update_expr", "block_stm", "whileStm", 
                   "doWhileStm", "breakStm", "continueStm", "returnStm", 
                   "callStm", "exprList", "expr", "expr0", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "operand", 
                   "idList", "arrLit", "arrEles", "int_list", "float_list", 
                   "bool_list", "string_list", "atomicType", "varType", 
                   "fnType", "arrTypeDecl", "intOp", "floatOp", "boolOp", 
                   "stringConcat", "indexOp", "indexList", "rUnaryOp", "binOp", 
                   "relational_op" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    FLOAT=5
    ELSE=6
    FOR=7
    FUNCTION=8
    IF=9
    INT=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    FLOATLIT=20
    INTLIT=21
    BOOLLIT=22
    STRINGLIT=23
    ADDOP=24
    SUBOP=25
    MULOP=26
    DIVOP=27
    MODOP=28
    NEGOP=29
    ANDOP=30
    OROP=31
    EQOP=32
    NEQOP=33
    LTOP=34
    LEOP=35
    GTOP=36
    GEOP=37
    STRINGCONCAT=38
    LB=39
    RB=40
    LSB=41
    RSB=42
    LCB=43
    RCB=44
    DOT=45
    COMMA=46
    SM=47
    COLON=48
    ASSIGN=49
    ID=50
    WS=51
    BLOCKCOMMENT=52
    LINECOMMENT=53
    ERROR_CHAR=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.decl()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BREAK) | (1 << MT22Parser.DO) | (1 << MT22Parser.FOR) | (1 << MT22Parser.IF) | (1 << MT22Parser.RETURN) | (1 << MT22Parser.WHILE) | (1 << MT22Parser.CONTINUE) | (1 << MT22Parser.LCB) | (1 << MT22Parser.ID))) != 0)):
                    break

            self.state = 123
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def fundecl(self):
            return self.getTypedRuleContext(MT22Parser.FundeclContext,0)


        def stm(self):
            return self.getTypedRuleContext(MT22Parser.StmContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.fundecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.stm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def vardecl_wo_asg(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_wo_asgContext,0)


        def vardecl_w_asg(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_w_asgContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 130
                self.vardecl_wo_asg()
                pass

            elif la_ == 2:
                self.state = 131
                self.vardecl_w_asg()
                pass


            self.state = 134
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_wo_asgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MT22Parser.IdListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_wo_asg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_wo_asg" ):
                return visitor.visitVardecl_wo_asg(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_wo_asg(self):

        localctx = MT22Parser.Vardecl_wo_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl_wo_asg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.idList()
            self.state = 137
            self.match(MT22Parser.COLON)
            self.state = 138
            self.varType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_w_asgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardecl_w_asg(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_w_asgContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_w_asg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_w_asg" ):
                return visitor.visitVardecl_w_asg(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_w_asg(self):

        localctx = MT22Parser.Vardecl_w_asgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_w_asg)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.vardecl_w_asg()
                self.state = 143
                self.match(MT22Parser.COMMA)
                self.state = 144
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MT22Parser.ID)
                self.state = 147
                self.match(MT22Parser.COLON)
                self.state = 148
                self.varType()
                self.state = 149
                self.match(MT22Parser.ASSIGN)
                self.state = 150
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun_prototype(self):
            return self.getTypedRuleContext(MT22Parser.Fun_prototypeContext,0)


        def block_stm(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fundecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFundecl" ):
                return visitor.visitFundecl(self)
            else:
                return visitor.visitChildren(self)




    def fundecl(self):

        localctx = MT22Parser.FundeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fundecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.fun_prototype()
            self.state = 155
            self.block_stm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_prototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def fnType(self):
            return self.getTypedRuleContext(MT22Parser.FnTypeContext,0)


        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def fun_inherit_subpart(self):
            return self.getTypedRuleContext(MT22Parser.Fun_inherit_subpartContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fun_prototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_prototype" ):
                return visitor.visitFun_prototype(self)
            else:
                return visitor.visitChildren(self)




    def fun_prototype(self):

        localctx = MT22Parser.Fun_prototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fun_prototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.ID)
            self.state = 158
            self.match(MT22Parser.COLON)
            self.state = 159
            self.match(MT22Parser.FUNCTION)
            self.state = 160
            self.fnType()
            self.state = 161
            self.paramdecl()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 162
                self.fun_inherit_subpart()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_inherit_subpartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fun_inherit_subpart

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_inherit_subpart" ):
                return visitor.visitFun_inherit_subpart(self)
            else:
                return visitor.visitChildren(self)




    def fun_inherit_subpart(self):

        localctx = MT22Parser.Fun_inherit_subpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fun_inherit_subpart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MT22Parser.INHERIT)
            self.state = 166
            self.match(MT22Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdecl" ):
                return visitor.visitParamdecl(self)
            else:
                return visitor.visitChildren(self)




    def paramdecl(self):

        localctx = MT22Parser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.LB)
            self.state = 169
            self.paramlist()
            self.state = 170
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 172
                self.params()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MT22Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_params)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.param()
                self.state = 176
                self.match(MT22Parser.COMMA)
                self.state = 177
                self.params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 182
                self.match(MT22Parser.INHERIT)


            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 185
                self.match(MT22Parser.OUT)


            self.state = 188
            self.match(MT22Parser.ID)
            self.state = 189
            self.match(MT22Parser.COLON)
            self.state = 190
            self.varType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

